# plasmite

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README-crate.md  README-proposal.md  README.md  RELEASING.md  SECURITY_AUDIT_2026-02-08.md  TESTING.md  build.rs  plasmite-cli-spec-v.0.1.md  plasmite-tdd-v.0.0.1.md  plasmite-tdd-v.0.1.md
.ergo/: events.jsonl  plans.jsonl
.githooks/: pre-commit
.github/workflows/: arm-runner-probe.yml  ci.yml  perf-monitor.yml  post-release-smoke.yml  release-publish.yml  release.yml  weekly-install-sanity.yml  windows-preview.yml  windows-probe.yml
bindings/go/: README.md  go.mod  plasmite.go  plasmite_test.go
bindings/go/api/: contracts.go  contracts_test.go
bindings/go/cmd/cookbook-smoke-fixture/: main.go
bindings/go/cmd/plasmite-conformance/: main.go
bindings/go/local/: local.go  local_test.go
bindings/node/: .npmignore  README.md  cookbook_smoke_fixture.js  index.d.ts  index.js  mappings.js  message.js  package-lock.json  package.json  remote.js  tsconfig.json  typecheck.ts  types.d.ts
bindings/node/cmd/: plasmite-conformance.js
bindings/node/native/: Cargo.toml  build.rs
bindings/node/native/src/: lib.rs
bindings/node/scripts/: check_type_surface.js  prepare_native_assets.js
bindings/node/test/: bindings.test.js  conformance.test.js
bindings/python/: MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
bindings/python/cmd/: cookbook_smoke_fixture.py  plasmite_conformance.py
bindings/python/plasmite/: __init__.py  _cli.py
bindings/python/tests/: test_bindings.py  test_conformance.py
c/: lite3_shim.c  lite3_shim.h
conformance/: README.md  manifest-v0.md  multiprocess-v0.json  negative-v0.json  pool-admin-v0.json  sample-v0.json
docs/: .ci-pr-validation-trigger.md  README.md  RELEASING.md  TESTING.md  api-quickstart.md  architecture.md  building.md  contributing.md  cookbook.md  doctor.md  exit-codes.md  go-quickstart.md  homebrew.md  libplasmite.md  pattern-matching.md  perf.md  pool-correctness-refactor.md  pool-snapshots.md  releasing.md  roadmap.md  test-coverage-expansion-proposal.md  vision.md
docs/decisions/: 0001-transport-strategy-tcp-now-quic-later.md  0002-per-entry-checksums-not-in-v0.md  0003-pattern-matching-interface-deferred.md  0004-remote-protocol-http-json.md  0005-inline-seq-index.md  README.md  simd-json-parser-contract.md
docs/design/: README.md  color-json.md  ingest-review.md  pattern-matching-spike-prototype.md  pattern-matching-ux-research.md  pattern-matching-v0-iterative-spec.md  pool-correctness-refactor.md  pool-snapshots.md  replay-mode.md  resize-strategy.md  tdd-public-api-v0.md  tdd-v0.0.1.md  web-ui-single-page-v1.md
docs/planning/: README.md  cli-usage-audit-matrix.md  docs-taxonomy-migration-map.md  missing-pool-remediation-exact-command-policy.md  perf.md  release-process-simplification-proposal.md  roadmap.md  vision.md  windows-bindings-scope.md  windows-build-strategy.md  windows-graduation-gates.md  windows-preview-rollback.md  windows.md
docs/planning/benchmarks/: get-scan-baseline-pre-index.md
docs/planning/design/: pattern-matching-ux-research.md  pattern-matching-v0-iterative-spec.md  pool-correctness-refactor.md  pool-snapshots.md  tdd-public-api-v0.md  tdd-v0.0.1.md
docs/proposals/: cli-output-improvements.md  mcp-server.md
docs/record/: README.md  TESTING.md  api-quickstart.md  architecture.md  browser-cors.md  cli-usage-feedback-audit.md  distribution.md  doctor.md  exit-codes.md  go-quickstart.md  homebrew.md  libplasmite.md  pattern-matching.md  releasing.md  serving.md  simd-json-rollout.md  testing.md  versioning.md  vision.md
docs/suggested-hooks/: README.md  banner.txt  install.sh  pre-commit  pre-push  prepare-commit-msg
examples/: plasmite-bench.rs
homebrew/: plasmite.rb
include/: plasmite.h
scripts/: abi_smoke.sh  bench_runtime_lanes.sh  bump_version.sh  check-json-parser-invariant.sh  check-version-alignment.sh  check_release_workflow_topology.sh  cli_ux_tour.sh  conformance_all.sh  cookbook_smoke.sh  cross_artifact_smoke.sh  node_pack_smoke.sh  node_remote_only_smoke.sh  normalize_sdk_layout.sh  package_node_natives.sh  package_release_sdk.sh  post_release_delivery_smoke.sh  python_wheel_smoke.sh  serve_dev.sh  update_homebrew_formula.sh  verify_homebrew_formula_alignment.sh
skills/plasmite-release-manager/: SKILL.md
skills/plasmite-release-manager/agents/: openai.yaml
skills/plasmite-release-manager/archive/: delivery-verification.md  qa-gates.md  release-hygiene.md
skills/plasmite-release-manager/references/: delivery-verification.md  qa-gates.md  release-hygiene.md
skills/plasmite-release-manager/scripts/: check_release_tooling_contract.sh  compare_local_benchmarks.sh  file_release_blocker.sh  file_release_blocker_with_evidence.sh  init_release_evidence.sh  inspect_release_build_metadata.sh  verify_licensing_notices.sh
spec/: README.md
spec/api/v0/: SPEC.md
spec/remote/v0/: SPEC.md
spec/v0/: SPEC.md
src/: abi.rs  bench.rs  color_json.rs  command_dispatch.rs  ingest.rs  jq_filter.rs  lib.rs  main.rs  mcp.rs  mcp_stdio.rs  notice.rs  pool_info_json.rs  pool_paths.rs  serve.rs  serve_init.rs  where_expr.rs
src/api/: client.rs  message.rs  mod.rs  notify.rs  remote.rs  validation.rs
src/core/: cursor.rs  error.rs  format.rs  frame.rs  mod.rs  notify.rs  plan.rs  pool.rs  validate.rs
src/core/lite3/: mod.rs  sys.rs
src/json/: mod.rs  parse.rs
tests/: cli_integration.rs  json_parse_errors.rs  json_parser_contract.rs  lock_smoke.rs  remote_integration.rs
ui/: index.html
