[package]
name = "plasmite"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Plasmite CLI."
repository = "https://github.com/sandover/plasmite"
readme = "README.md"
build = "build.rs"
rust-version = "1.88"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "plasmite"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
jaq-core = "2"
jaq-parse = "1"
jaq-std = "2"
memmap2 = "0.9"
libc = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tokio-stream = "0.1"
bytes = "1"
ureq = "2"
url = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = "1"
