[package]
name = "plasmite"
version = "0.1.9"
edition = "2024"
license = "MIT"
description = "Persistent JSON message queues backed by plain files for local and remote IPC"
repository = "https://github.com/sandover/plasmite"
readme = "README-crate.md"
build = "build.rs"
keywords = ["ipc", "queue", "json", "messaging", "pubsub"]
categories = ["command-line-utilities", "development-tools", "data-structures"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "plasmite"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
fs2 = "0.4"
jaq-core = "2"
jaq-parse = "1"
jaq-std = "2"
memmap2 = "0.9"
libc = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tokio-stream = "0.1"
bytes = "1"
ureq = "2"
url = "2"
rcgen = "0.12"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio", "service", "http1", "http2"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
bstr = "1"
getrandom = "0.3"

[features]
default = []

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = "1"
