# Purpose: Define build metadata for the Plasmite Python binding.
# Key exports: Package metadata and dependencies.
# Role: Enable editable installs and packaging for the ctypes wrapper.
# Invariants: Version aligns with core crate; no extra runtime deps.
# Notes: Uses setuptools for lightweight packaging.

[build-system]
requires = ["setuptools>=68", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "plasmite"
version = "0.5.0"
description = "Persistent JSON message queues for Python - native bindings for local and remote IPC"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
keywords = ["ipc", "queue", "json", "messaging", "pubsub"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/sandover/plasmite"
Repository = "https://github.com/sandover/plasmite"
Documentation = "https://github.com/sandover/plasmite#readme"

[project.scripts]
plasmite = "plasmite._cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["plasmite"]

[tool.setuptools.package-data]
plasmite = ["_native/*"]
